@@ -910,9 +910,31 @@ class StripeTest < Test::Unit::TestCase
       headers && headers['Idempotency-Key'] == 'test123'
     }.returns(successful_purchase_response)
 
-    @gateway.purchase(@amount, @credit_card, @options.merge(:idempotency_key => 'test123'))
+    response = @gateway.purchase(@amount, @credit_card, @options.merge(:idempotency_key => 'test123'))
+    assert_success response
   end
 
+  def test_optional_idempotency_on_void
+    @gateway.expects(:ssl_request).once.with {|method, url, post, headers|
+      headers && headers['Idempotency-Key'] == 'test123'
+    }.returns(successful_purchase_response(true))
+
+    response = @gateway.void('ch_test_charge', @options.merge(:idempotency_key => 'test123'))
+    assert_success response
+  end
+
+  def test_optional_idempotency_on_verify
+    @gateway.expects(:ssl_request).with do |method, url, post, headers|
+      headers && headers['Idempotency-Key'] == nil
+    end.returns(successful_void_response)
+
+    @gateway.expects(:ssl_request).with do |method, url, post, headers|
+      headers && headers['Idempotency-Key'] == 'test123'
+    end.returns(successful_authorization_response)
+
+    response = @gateway.verify(@credit_card, @options.merge(:idempotency_key => 'test123'))
+    assert_success response
+  end
 
   def test_initialize_gateway_with_version
     @gateway = StripeGateway.new(:login => 'login', :version => '2013-12-03')
